fixed font size and image alignment

--- a/sfpopos/src/POPOSSpace.css
+++ b/sfpopos/src/POPOSSpace.css
@@ -10,7 +10,7 @@
   border-radius: 3px;
 }
 
-.POPOSSpace > h1 {
+h1 {
   font-size: 25px;
 }
 img {
